--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -78,12 +78,12 @@
                     </div>
 
                     <div class="col-md-9 form-group mt-3 mt-md-0">
-                        <select name="category" id="category">
-                            {% for category in categories %}
-                                <option value="{{ category.id }}"> {{ category.category_name }} </option>
-                            {% endfor %}
-                        </select>
-                    </div>
+                      <select name="category" id="category" class="form-control">
+                          {% for category in categories %}
+                              <option value="{{ category.id }}"> {{ category.category_name }} </option>
+                          {% endfor %}
+                      </select>
+                  </div>
                 </div>
 
                 <div class="text-center"><button type="submit">Create Auction</button></div>
